# txt2cql

./: README.md  instructions.txt  pyproject.toml
src/txt2cql/: main.py
